# wslman

./: CMakeLists.txt  wslfs.cpp  wslfs.h  wslinstall.cpp  wslinstall.h  wslman.cpp  wslman.manifest  wslman.qrc  wslman.rc  wslregistry.cpp  wslregistry.h  wslsetuser.cpp  wslsetuser.h  wslui.cpp  wslui.h  wslutils.cpp  wslutils.h  wslwrap.cpp  wslwrap.h
